# Client

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  justfile  pnpm-lock.yaml  rust-toolchain.toml
.github/: release.yml
.github/workflows/: ci.yml  release-client.yml  release-launcher.yml
pomme-block/: Cargo.toml  README.md
pomme-block/src/: block_state.rs  blocks.rs  fluid_state.rs  lib.rs  properties.rs  range.rs
pomme-client/: Cargo.toml  build.rs
pomme-client/src/: benchmark.rs  entity.rs  lang.rs  logging.rs  main.rs  particle.rs  user.rs  util.rs  version.rs
pomme-client/src/app/: core.rs  input.rs  mod.rs
pomme-client/src/app/phases/: connecting.rs  in_game.rs  in_menu.rs  mod.rs
pomme-client/src/audio/: mod.rs
pomme-client/src/entity/: mod.rs  villager.rs
pomme-client/src/net/: azalea_compat.rs  commands.rs  connection.rs  handler.rs  mod.rs  resolve.rs  sender.rs  translate.rs
pomme-client/src/physics/: aabb.rs  block_shape.rs  collision.rs  movement.rs
pomme-client/src/player/: interaction.rs  inventory.rs  menu_click.rs  mod.rs  tab_list.rs
pomme-client/src/renderer/: block_entity_model.rs  camera.rs  context.rs  entity_model.rs  hiz.rs  mod.rs  swapchain.rs  timings.rs  util.rs  visibility.rs
pomme-client/src/renderer/chunk/: atlas.rs  buffer.rs  chunk.rs  dispatcher.rs  greedy.rs  mesher.rs  mod.rs  occlusion_graph.rs  packing_consts.rs  section.rs
pomme-client/src/renderer/pipelines/: block_entity.rs  block_overlay.rs  blur.rs  book_preview.rs  chunk.rs  chunk_borders.rs  clouds.rs  entity_renderer.rs  gui_item.rs  gui_item_atlas.rs  hand.rs  held_item.rs  menu_overlay.rs  mod.rs  particle.rs  skin_preview.rs  weather.rs
pomme-client/src/renderer/shaders/: chunk.frag  chunk.vert  chunk_solid.frag  clouds.vert  cull.comp  entity.frag  entity.vert  fog.glsl  hiz_copy.comp  hiz_reduce.comp  item_entity.frag  item_entity.vert  menu_overlay.frag  particle.frag  particle.vert  visibility.comp  water.vert  weather.vert
pomme-client/src/ui/: anvil.rs  chat.rs  chest.rs  common.rs  container.rs  crafting_table.rs  creative_inventory.rs  death.rs  enchantment.rs  font.rs  friends.rs  furnace.rs  hud.rs  inventory.rs  mod.rs  pause.rs  server_list.rs  text.rs
pomme-client/src/ui/menu/: auth_screens.rs  friends_screen.rs  helpers.rs  main_screen.rs  mod.rs  options.rs  servers.rs
pomme-client/src/window/: input.rs  mod.rs
pomme-client/src/world/: block_entity.rs  block_entity_anim.rs  chunk.rs  mod.rs  waypoints.rs
pomme-client/src/world/block/: mod.rs  model.rs  registry.rs  sound.rs
pomme-client/src/world/block/data/: block_behavior.json  blocks-1.21.10.json  blocks-1.21.11.json  blocks-26.1.json  blocks-26.2.json  light-1.21.10.json  light-1.21.11.json  light-26.1.json  light-26.2.json
pomme-client/src/world/light/: block.rs  data.rs  engine.rs  mod.rs  queue.rs  sky.rs  sources.rs  storage.rs  world.rs
pomme-launcher/: package.json
pomme-launcher/src/: App.tsx  styles.css
pomme-launcher/src-tauri/: Cargo.toml  tauri.conf.json
pomme-launcher/src-tauri/src/: client_updater.rs  commands.rs  lib.rs  ping.rs  storage.rs
pomme-launcher/src/bindings/pomme_launcher/: ping.ts
pomme-launcher/src/lib/: servers.ts  types.ts
pomme-protocol/: Cargo.toml
pomme-protocol/src/: lib.rs  packets.rs  registries.rs  version.rs  wire.rs
pomme-protocol/src/data/: protocol-1.21.10.json  protocol-1.21.11.json  protocol-26.1.json  protocol-26.2.json  registries-1.21.10.json  registries-1.21.11.json  registries-26.1.json  registries-26.2.json
tools/blockgen/: Cargo.toml
tools/blockgen/src/: main.rs
tools/lightgen/: LightDump.java
tools/protogen/: Cargo.toml
tools/protogen/src/: main.rs
