[workspace]
resolver = "3"
members = [
    "pomme-client",
    "pomme-launcher/src-tauri",
    "pomme-gpu-allocator"
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
directories = "6"
sha1_smol = "1"
open = "5"
base64 = "0.22"
zip = { version = "8.6", default-features = false, features = ["deflate"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }

# client
pyronyx = "=0.3.2"
tracing = "0.1"
tracing-subscriber = "0.3"

# azalea lags crates.io releases; track the 26.2 branch from git.
[patch.crates-io]
azalea-buf = { git = "https://github.com/azalea-rs/azalea", branch = "26.2" }
azalea-protocol = { git = "https://github.com/azalea-rs/azalea", branch = "26.2" }
azalea-crypto = { git = "https://github.com/azalea-rs/azalea", branch = "26.2" }
azalea-auth = { git = "https://github.com/azalea-rs/azalea", branch = "26.2" }
azalea-entity = { git = "https://github.com/azalea-rs/azalea", branch = "26.2" }
azalea-world = { git = "https://github.com/azalea-rs/azalea", branch = "26.2" }
azalea-block = { git = "https://github.com/azalea-rs/azalea", branch = "26.2" }
azalea-chat = { git = "https://github.com/azalea-rs/azalea", branch = "26.2" }
azalea-core = { git = "https://github.com/azalea-rs/azalea", branch = "26.2" }
azalea-registry = { git = "https://github.com/azalea-rs/azalea", branch = "26.2" }
azalea-inventory = { git = "https://github.com/azalea-rs/azalea", branch = "26.2" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
