[package]
name = "pomme-client"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[build-dependencies]
shaderc = "0.10"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
directories = { workspace = true }
sha1_smol = { workspace = true }
open = { workspace = true }
base64 = { workspace = true }
zip = { workspace = true }
tokio = { workspace = true, features = ["tracing", "net", "time"] }
reqwest = { workspace = true, features = ["blocking"] }
pyronyx = { workspace = true, features = ["rwh_06"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracy-client = "0.16"

tracing-appender = "0.2"
pomme-gpu-allocator = { path = "../pomme-gpu-allocator" }
winit = { version = "0.30", features = ["rwh_06"] }
raw-window-handle = "0.6"
glam = "0.33"
clap = { version = "4", features = ["derive"] }
parking_lot = "0.12"
bytemuck = { version = "1", features = ["derive"] }
time = { version = "0.3", features = ["formatting", "macros"] }
flate2 = "1"
azalea-buf = "0.16"
azalea-protocol = { version = "0.16", features = ["connecting"] }
azalea-crypto = "0.16"
azalea-auth = "0.16"
azalea-entity = "0.16"
azalea-world = "0.16"
azalea-block = "0.16"
azalea-chat = "0.16"
azalea-core = "0.16"
azalea-registry = "0.16"
azalea-inventory = "0.16"
uuid = { version = "1", features = ["v4"] }
crossbeam-channel = "0.5"
png = "0.17"
image = "0.25"
fontdue = "0.9.3"
simdnbt = "0.10"
discord-rich-presence = "1.1"
arboard = "3"
scopeguard = "1.2"
rodio = "0.22"
fastrand = "2"
gilrs = "0.11.2"
