[package]
name = "pomme-launcher"
default-run = "pomme-launcher"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
directories = { workspace = true }
sha1_smol = { workspace = true }
open = { workspace = true }
base64 = { workspace = true }
zip = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true, features = ["form"] }
pomme-protocol = { path = "../../pomme-protocol" }

tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
log = "0.4"
rand = "0.10"
keyring = { version = "3", features = ["apple-native", "sync-secret-service", "windows-native"] }
sha2 = "0.11"
urlencoding = "2"
url = "2"
hickory-resolver = { version = "0.25.2", features = ["tokio"] }

# Pinned to rc.24 since the 2.0 API still churns between RCs; unpin once 2.0.0 ships.
specta = "=2.0.0-rc.24"
tauri-specta = { version = "=2.0.0-rc.24", features = ["derive", "typescript"] }
specta-typescript = "0.0.11"
